# axum_todo

./: .gitignore  Cargo.toml  README.md
configuration/: base.yaml
migrations/: 20220610074042_create_todolist_table.sql
scripts/: init_db.sh
src/: configuration.rs  error.rs  form.rs  handler.rs  lib.rs  main.rs  model.rs  response.rs
src/db/: mod.rs  todo_item.rs  todo_list.rs
src/handler/: mod.rs  todo_item.rs  todo_list.rs  usage.rs
